tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr70602.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr70602.c" (c, x86_64-unknown-linux-gnu)
global __const.main.e : rec_S[21] = [{[18, 0, 0]}, {[18, 0, 0]}, {[18, 0, 0]}, zero, {[18, 0, 0]}, {[18, 0, 0]}, {[18, 0, 0]}, zero, {[18, 0, 0]}, {[18, 0, 0]}, {[18, 0, 0]}, zero, {[18, 0, 0]}, {[18, 0, 0]}, {[18, 0, 0]}, zero, {[18, 0, 0]}, {[18, 0, 0]}, {[18, 0, 0]}, zero, {[18, 0, 0]}] [cir_private, default, dso_local, constant]
global a : s32i = 0 [external, default, align 4, dso_local]
global b : s32i = 0 [external, default, align 4, dso_local]
global c : s32i = 0 [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        for cond: {
            %26 = get_global @a : s32i*
            %27 = load %26 : s32i, align 4
            %28 = const 1 : s32i
            %29 = cmp lt %27, %28 : bool
            condition %29
        } step: {
            %4 = get_global @a : s32i*
            %5 = load %4 : s32i, align 4
            %6 = inc %5 : s32i [nsw]
            store %6, %4, align 4
            yield
        } do {
            scope {
                %7 = alloca rec_S[21], "e", align 16
                %8 = get_global @__const.main.e : rec_S[21]*
                copy %7, %8
                %9 = get_global @b : s32i*
                %10 = load %9 : s32i, align 4
                %11 = cast(int_to_bool) %10 : bool
                %12 = ternary %11 ? { : bool
                    %25 = const #true : bool
                    yield %25
                } : {
                    %20 = const 0 : s64i
                    %21 = get_element %7[%20] : rec_S*
                    %22 = get_member %21[0] "s" : u8i[3]*
                    <unmodeled: cir.get_bitfield>
                    %24 = cast(int_to_bool) %23 : bool
                    yield %24
                }
                %13 = cast(bool_to_int) %12 : s32i
                %14 = get_global @b : s32i*
                store %13, %14, align 4
                %15 = const 0 : s64i
                %16 = get_element %7[%15] : rec_S*
                %17 = get_member %16[0] "t" : u8i[3]*
                <unmodeled: cir.get_bitfield>
                %19 = get_global @c : s32i*
                store %18, %19, align 4
                yield
            }
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
