tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr7284_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr7284-1.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 128 [external, default, align 4, dso_local]

fn f(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %11 = alloca s32i, "n", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg0, %11
        %13 = load %11 : s32i, align 4
        %14 = const 24 : s32i
        %15 = shift left %13, %14 : s32i
        %16 = const 1 : s32i
        %17 = const 23 : s32i
        %18 = shift left %16, %17 : s32i
        %19 = div %15, %18 : s32i
        store %19, %12
        %20 = load %12 : s32i
        return %20
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = get_global @x : s32i*
        %6 = load %5 : s32i, align 4, volatile
        %7 = call @f(%6) : s32i [all]
        %8 = const -256 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
